tests/e2e/semantics/mutation/list_substring_no_args.story
a = [1]
b = a.substring()
